added some more

--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
     </head>
     <body>
         <div id='content-div'>
+            <h1>Tic Tac Tow</h1>
             <div id='board-div'>
-                <div id='sq-0' class='board-square'></div>
-                <div id='sq-1' class='board-square'></div>
-                <div id='sq-2' class='board-square'></div>
-                <div id='sq-3' class='board-square'></div>
-                <div id='sq-4' class='board-square'></div>
-                <div id='sq-5' class='board-square'></div>
-                <div id='sq-6' class='board-square'></div>
-                <div id='sq-7' class='board-square'></div>
-                <div id='sq-8' class='board-square'></div>
+                <div id='sq-0' class='game-grid' data-no='0'></div>
+                <div id='sq-1' class='game-grid' data-no='1'></div>
+                <div id='sq-2' class='game-grid' data-no='2'></div>
+                <div id='sq-3' class='game-grid' data-no='3'></div>
+                <div id='sq-4' class='game-grid' data-no='4'></div>
+                <div id='sq-5' class='game-grid' data-no='5'></div>
+                <div id='sq-6' class='game-grid' data-no='6'></div>
+                <div id='sq-7' class='game-grid' data-no='7'></div>
+                <div id='sq-8' class='game-grid' data-no='8'></div>
             </div>
         </div>
 
