--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
         <div id='content-div'>
             <h1>Tic Tac Tow</h1>
             <div id='board-div'>
-                <div id='sq-0' class='game-grid' data-no='0'></div>
-                <div id='sq-1' class='game-grid' data-no='1'></div>
-                <div id='sq-2' class='game-grid' data-no='2'></div>
-                <div id='sq-3' class='game-grid' data-no='3'></div>
-                <div id='sq-4' class='game-grid' data-no='4'></div>
-                <div id='sq-5' class='game-grid' data-no='5'></div>
-                <div id='sq-6' class='game-grid' data-no='6'></div>
-                <div id='sq-7' class='game-grid' data-no='7'></div>
-                <div id='sq-8' class='game-grid' data-no='8'></div>
+                <div id='sq-0-0' class='game-grid' data-no='0-0'></div>
+                <div id='sq-0-1' class='game-grid' data-no='0-1'></div>
+                <div id='sq-0-2' class='game-grid' data-no='0-2'></div>
+                <div id='sq-1-0' class='game-grid' data-no='1-0'></div>
+                <div id='sq-1-1' class='game-grid' data-no='1-1'></div>
+                <div id='sq-1-2' class='game-grid' data-no='1-2'></div>
+                <div id='sq-2-0' class='game-grid' data-no='2-0'></div>
+                <div id='sq-2-1' class='game-grid' data-no='2-1'></div>
+                <div id='sq-2-2' class='game-grid' data-no='2-2'></div>
             </div>
         </div>
 
