added reset and check for tie

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <div id='content-div'>
             <h1>Tic Tac Tow</h1>
+            <div id='message-div'></div>
             <div id='board-div'>
                 <div id='sq-0-0' class='game-grid' data-no='0-0'></div>
                 <div id='sq-0-1' class='game-grid' data-no='0-1'></div>
@@ -21,6 +22,7 @@
                 <div id='sq-2-1' class='game-grid' data-no='2-1'></div>
                 <div id='sq-2-2' class='game-grid' data-no='2-2'></div>
             </div>
+            <button id='btn-reset'>RESET</button>
         </div>
 
 
