added turn message and improved gui

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+
+        <div id='turn-div'>hehehe</div>
         <div id='content-div'>
-            <h1>Tic Tac Tow</h1>
+            <h1>Tic Tac Toe</h1>
             <div id='message-div'></div>
             <div id='board-div'>
                 <div id='sq-0-0' class='game-grid' data-no='0-0'></div>
